--- a/src/components/sidebar/sidebar.module.css
+++ b/src/components/sidebar/sidebar.module.css
@@ -1,20 +1,33 @@
 .sidebar {
-  position: fixed;
-  left: 0;
-  top: 0;
-  height: 100%;
-  width: 280px;
-  background-color: #fff;
-  border-right: 1px solid lightblue;
-  overflow-y: scroll;
-  font-family: var(--font-lato);
+	position: fixed;
+	left: 0;
+	top: 0;
+	height: 100%;
+	width: 280px;
+	padding: 1rem 1.5rem 1.5rem 1.5rem;
+	border-right: 1px solid lightblue;
+	overflow-y: scroll;
+	font-family: var(--font-plus-jakarta-sans);
 }
 
-.sidebar label {
-  font-size: .85rem;
-  font-weight: 700;
+.sidebar ul {
+	list-style: none;
 }
 
-.sidebar li {
-  font-size: 1rem;
+.sidebar h1 {
+	font-size: 1.8rem;
+}
+
+.sidebar .menu_label {
+	font-size: 0.9rem;
+	font-weight: 500;
+	margin-right: 1.6rem;
+  margin-top: 2.8rem;
+}
+
+.sidebar .menu_item {
+	font-size: .875rem;
+	margin: 1.2rem 1.6rem;
+  font-weight: 400;
+  line-height: 1.344rem;
 }
