--- a/src/components/sidebar/sidebar.module.css
+++ b/src/components/sidebar/sidebar.module.css
@@ -12,6 +12,7 @@
 
 .sidebar ul {
 	list-style: none;
+  margin-left: .6rem;
 }
 
 .sidebar h1 {
@@ -19,14 +20,14 @@
 }
 
 .sidebar .menu_label {
-	font-size: 0.9rem;
+	font-size: .875rem;
 	font-weight: 500;
 	margin-right: 1.6rem;
   margin-top: 2.8rem;
 }
 
 .sidebar .menu_item {
-	font-size: .875rem;
+	font-size: 1rem;
 	margin: 1.2rem 1.6rem;
   font-weight: 400;
   line-height: 1.344rem;
