Add navigation with starter styling

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+
 }
 
 body {
@@ -39,4 +40,24 @@ a {
   html {
     color-scheme: dark;
   }
+}
+
+.layout {
+  display: flex;
+  width: 100vw;
+}
+
+.main-container {
+  flex-grow: 1;
+  margin-left: 280px; /* Same as sidebar width */
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  border: 1px solid green;
+}
+
+main {
+  flex-grow: 1;
+  padding: 20px;
+  overflow: auto; /* Allows scrolling */
 }
