--- a/src/components/sidebar/sidebar.module.css
+++ b/src/components/sidebar/sidebar.module.css
@@ -2,7 +2,7 @@
 	position: fixed;
 	left: 0;
 	top: 0;
-	height: 100%;
+	height: 100vh;
 	width: 280px;
 	padding: 1rem 1.5rem 1.5rem 1.5rem;
 	border-right: 1px solid lightblue;
@@ -10,9 +10,13 @@
 	font-family: var(--font-plus-jakarta-sans);
 }
 
+.logo {
+  border: 1px solid red;
+}
+
 .sidebar ul {
 	list-style: none;
-  margin-left: .6rem;
+	margin-left: 0.6rem;
 }
 
 .sidebar h1 {
@@ -20,15 +24,16 @@
 }
 
 .sidebar .menu_label {
-	font-size: .875rem;
+	font-size: 0.875rem;
 	font-weight: 500;
 	margin-right: 1.6rem;
-  margin-top: 2.8rem;
+	margin-top: 2.8rem;
 }
 
 .sidebar .menu_item {
 	font-size: 1rem;
 	margin: 1.2rem 1.6rem;
-  font-weight: 400;
-  line-height: 1.344rem;
+	font-weight: 400;
+	line-height: 1.344rem;
 }
+
