--- a/src/components/sidebar/sidebar.module.css
+++ b/src/components/sidebar/sidebar.module.css
@@ -3,8 +3,8 @@
 	left: 0;
 	top: 0;
 	height: 100vh;
-	width: 280px;
-	padding: 1rem 1.5rem 1.5rem 1.5rem;
+	width: 250px;
+	padding: .6rem 1.5rem 1.5rem 1.5rem;
 	border-right: 1px solid lightblue;
 	overflow-y: scroll;
 	font-family: var(--font-plus-jakarta-sans);
@@ -31,5 +31,6 @@
 	margin: 1.2rem 1.6rem;
 	font-weight: 400;
 	line-height: 1.344rem;
+  color: rgb(150, 142, 142);
 }
 
