--- a/src/components/sidebar/sidebar.module.css
+++ b/src/components/sidebar/sidebar.module.css
@@ -3,11 +3,19 @@
 	left: 0;
 	top: 0;
 	height: 100vh;
-	width: 250px;
+	width: 230px;
 	padding: .6rem 1.5rem 1.5rem 1.5rem;
 	border-right: 1px solid lightblue;
 	overflow-y: scroll;
 	font-family: var(--font-plus-jakarta-sans);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.logo {
+  margin-right: 1.5rem;
+  font-size: 1.65rem;
 }
 
 .sidebar ul {
@@ -15,8 +23,8 @@
 	margin-left: 0.6rem;
 }
 
-.sidebar h1 {
-	font-size: 1.8rem;
+.sidebar ul li::before {
+  display: none;
 }
 
 .sidebar .menu_label {
@@ -24,6 +32,10 @@
 	font-weight: 500;
 	margin-right: 1.6rem;
 	margin-top: 2.8rem;
+}
+
+.sidebar .menu_label:nth-child(1) {
+  margin-top: 1rem;
 }
 
 .sidebar .menu_item {
