--- a/src/components/sidebar/sidebar.module.css
+++ b/src/components/sidebar/sidebar.module.css
@@ -31,11 +31,11 @@
 	font-size: 0.875rem;
 	font-weight: 500;
 	margin-right: 1.6rem;
-	margin-top: 2.8rem;
+	margin-top: 2rem;
 }
 
 .sidebar .menu_label:nth-child(1) {
-  margin-top: 1rem;
+  margin-top: .5rem;
 }
 
 .sidebar .menu_item {
