--- a/src/components/sidebar/sidebar.module.css
+++ b/src/components/sidebar/sidebar.module.css
@@ -4,45 +4,46 @@
 	top: 0;
 	height: 100vh;
 	width: 230px;
-	padding: .6rem 1.5rem 1.5rem 1.5rem;
+	padding: 0.6rem 1.5rem 1.5rem 1.5rem;
 	border-right: 1px solid lightblue;
 	overflow-y: scroll;
 	font-family: var(--font-plus-jakarta-sans);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+  justify-content: center;
 }
 
 .logo {
-  margin-right: 1.5rem;
-  font-size: 1.65rem;
+	margin-right: 1.5rem;
+	font-size: 1.65rem;
 }
 
 .sidebar ul {
 	list-style: none;
 	margin-left: 0.6rem;
+  height: 100vh;
 }
 
 .sidebar ul li::before {
-  display: none;
+	display: none;
 }
 
 .sidebar .menu_label {
 	font-size: 0.875rem;
 	font-weight: 500;
-	margin-right: 1.6rem;
+	margin-right: 2rem;
 	margin-top: 2rem;
 }
 
 .sidebar .menu_label:nth-child(1) {
-  margin-top: .5rem;
+	margin-top: 0.5rem;
 }
 
 .sidebar .menu_item {
 	font-size: 1rem;
-	margin: 1.2rem 1.6rem;
+	margin: 1rem 1.6rem;
 	font-weight: 400;
 	line-height: 1.344rem;
-  color: rgb(150, 142, 142);
+	color: rgb(150, 142, 142);
 }
-
