--- a/src/components/chart_customer_relations/customer_relations.module.css
+++ b/src/components/chart_customer_relations/customer_relations.module.css
@@ -1,5 +1,5 @@
 .card {
-  border: 1px solid rgba(0, 0, 0, .1);
-  width: 680px;
-  height: 350px;
+  /* border: 1px solid rgba(0, 0, 0, .1); */
+  width: 735px;
+  height: 300px;
 }
