--- a/src/components/navs/navigation/navigation.module.css
+++ b/src/components/navs/navigation/navigation.module.css
@@ -17,9 +17,9 @@
 	align-items: center;
 }
 
-.login {
+.logout {
 	display: block;
-	width: 50px;
+	width: 60px;
 	height: 13px;
 	background: #4e9caf;
 	padding: 10px;
@@ -41,7 +41,7 @@
 	height: 40px;
 	width: 40px;
 	border-radius: 50%;
-	margin-left: 1rem;
+	margin-left: 1.2rem;
 }
 
 .border_bottom {
