--- a/src/components/post/post.module.css
+++ b/src/components/post/post.module.css
@@ -35,3 +35,11 @@
 	align-items: center;
 	justify-content: center;
 }
+
+.checkbox_container {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 5rem;
+}
