--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -65,4 +65,11 @@ main {
   padding: .5rem 1rem 0;
   width: 100%;
   font-weight: 200;
+  margin-bottom: 0;
+}
+
+.card {
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  margin-bottom: .8rem;
+
 }
