--- a/src/components/cards/open_rate/open_rate.module.css
+++ b/src/components/cards/open_rate/open_rate.module.css
@@ -45,10 +45,6 @@
   width: 100%;
 }
 
-.barChart {
-
-}
-
 .tooltip {
   background-color: white; /* Default Light Mode */
   color: black;
@@ -59,7 +55,7 @@
 }
 
 .dark {
-  background-color: rgb(24, 23, 23);
+  background-color: black;
   color: white;
   border: 1px solid #444;
 }
