--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -60,7 +60,7 @@ main {
 .card {
   border: 1px solid rgba(0, 0, 0, 0.2);
   margin-bottom: .8rem;
-
+  box-shadow:0 10px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19) !important;
 }
 
 
