--- a/src/components/cards/open_rate/open_rate.module.css
+++ b/src/components/cards/open_rate/open_rate.module.css
@@ -1,61 +1,76 @@
 .container {
-  display: flex;
-  flex-direction: column;
+	display: flex;
+	flex-direction: column;
+	height: 300px;
+	justify-content: space-between;
 }
 
 .container p {
-  width: 35%;
-  text-align: center;
-  padding-top: .7rem;
+	width: 30%;
+	text-align: center;
+	padding-top: 0.7rem;
+	height: 50px;
 }
 
 .content_container {
-  display: flex;
-  align-items: center;
-  margin-right: 2rem;
+	display: flex;
+	align-items: center;
+	margin-right: 2rem;
+}
+
+.gauge {
+  margin-top: 2.5rem;
 }
 
 .total_count {
-  text-align: center;
-  width: 50%;
-  font-size: 3rem;
-  font-weight: bold;
-  padding: 0;
-  margin: 0;
-  line-height: 2.2rem;
+	text-align: center;
+	width: 50%;
+	font-size: 3rem;
+	font-weight: bold;
+	padding: 0;
+	margin: 0;
+	line-height: 2.2rem;
 }
 
 .total {
-  font-size: 1rem;
-  font-weight: lighter;
-  margin-right: 4rem;
-  display: block;
+	font-size: 1rem;
+	font-weight: lighter;
+	margin-right: 4rem;
+	display: block;
 }
 
 .chart_container {
-  width: 100%;
-  display: flex;
-  justify-content: end;
+	display: flex;
+	justify-content: space-between; /* Ensure even spacing */
+	align-items: center;
+	width: 100%;
+	height: 250px; /* Make sure it takes full height */
+	padding: 1rem; /* Adjust padding */
 }
 
 .chart {
-  height: 200px;
-  display: flex;
-  justify-content: end;
-  width: 100%;
+	height: 200px;
+	display: flex;
+	justify-content: end;
+	width: 100%;
 }
 
 .tooltip {
-  background-color: white; /* Default Light Mode */
-  color: black;
-  border: 1px solid #ddd;
-  padding: 8px;
-  border-radius: 6px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+	background-color: white; /* Default Light Mode */
+	color: black;
+	border: 1px solid #ddd;
+	padding: 8px;
+	border-radius: 6px;
+	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .dark {
-  background-color: black;
-  color: white;
-  border: 1px solid #444;
+	background-color: black;
+	color: white;
+	border: 1px solid #444;
+}
+
+.line_chart_container {
+	height: auto;
+	width: 100%;
 }
