--- a/src/components/cards/open_rate/open_rate.module.css
+++ b/src/components/cards/open_rate/open_rate.module.css
@@ -1,7 +1,8 @@
 .container {
 	display: flex;
 	flex-direction: column;
-	height: 300px;
+	width: 100%;
+  height: 100%;
 	justify-content: space-between;
 }
 
