--- a/src/components/cards/welcome_emails_gauge/welcome_emails.module.css
+++ b/src/components/cards/welcome_emails_gauge/welcome_emails.module.css
@@ -1,6 +1,8 @@
 .container {
 	display: flex;
 	flex-direction: column;
+	width: 100%;
+	height: 100%;
 }
 
 .container p {
@@ -35,13 +37,17 @@
 .chart_container {
 	width: 100%;
 	display: flex;
-	height: 210px;
-  flex-direction: row;
+	height: 110px;
+	flex-direction: row;
+	align-items: center;
+}
 
+.chart {
+	border: 1px solid red;
 }
 
 .tooltip {
-  background-color: white; /* Default Light Mode */
+	background-color: white; /* Default Light Mode */
 	color: black;
 	border: 1px solid #ddd;
 	padding: 8px;
@@ -50,12 +56,11 @@
 }
 
 .dark {
-  background-color: black;
+	background-color: black;
 	color: white;
 	border: 1px solid #444;
 }
 
 .gauge {
-  margin-top: 1.5rem;
+	margin-top: 1.5rem;
 }
-
