--- a/src/components/cards/welcome_emails_gauge/welcome_emails.module.css
+++ b/src/components/cards/welcome_emails_gauge/welcome_emails.module.css
@@ -5,11 +5,6 @@
 	height: 100%;
 }
 
-.container p {
-	width: 35%;
-	text-align: center;
-	padding-top: 0.7rem;
-}
 
 .content_container {
 	display: flex;
@@ -23,7 +18,7 @@
 	font-size: 3rem;
 	font-weight: bold;
 	padding: 0;
-	margin: 0 0 2rem;
+	margin: 3.5rem 0 2rem;
 	line-height: 2.2rem;
 }
 
@@ -37,13 +32,17 @@
 .chart_container {
 	width: 100%;
 	display: flex;
-	height: 110px;
+	height: 100%;
 	flex-direction: row;
 	align-items: center;
+  justify-content: space-around;
 }
 
 .chart {
-	border: 1px solid red;
+	height: 200px;
+	display: flex;
+	justify-content: end;
+	width: 100%;
 }
 
 .tooltip {
@@ -62,5 +61,24 @@
 }
 
 .gauge {
-	margin-top: 1.5rem;
+	padding-top: 10%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+
+@media screen and (min-width: 2560px) {
+  .content_container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 2rem;
+  }
+
+  .chart_container {
+    width: 100%;
+    height: 100%;
+  }
+
 }
