--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,17 +40,19 @@ a {
 
 .main-container {
 	flex-grow: 1;
-	margin-left: 240px; /* Same as sidebar width */
+	margin-left: 230px; /* Same as sidebar width */
 	display: flex;
 	flex-direction: column;
 	height: 100vh;
+  width: 100%;
 }
 
 main {
 	flex-grow: 1;
-	padding: 20px 20px 20px 0;
+	padding: 20px 0px 0 0;
 	overflow: auto; /* Allows scrolling */
-	margin-bottom: 1rem;
+	margin: 0 0 1rem 0;
+  justify-content: center;
 }
 
 .card_title {
