--- a/src/components/cards/leads_by_source/leads_by_source.module.css
+++ b/src/components/cards/leads_by_source/leads_by_source.module.css
@@ -2,3 +2,22 @@
 	width: 100%;
   height: 100%;
 }
+
+.list_container {
+  border-bottom: 1px solid rgba(125, 125, 125, 0.5);
+  display: flex;
+  justify-content: space-between;
+  padding: 0rem 1rem 0 .5rem;
+  width: 95%;
+  margin: 1rem auto 0;
+  color: #444;
+}
+
+.dark {
+	border-bottom: 1px solid #444;
+  display: flex;
+  justify-content: space-between;
+  padding: 0rem 1rem 0 .5rem;
+  width: 95%;
+  margin: 1rem auto 0;
+}
