--- a/src/components/dashboard/dashboard.module.css
+++ b/src/components/dashboard/dashboard.module.css
@@ -1,8 +1,10 @@
 .container {
 	display: grid;
 	grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
-	gap: 20px;
+	gap: 15px;
 	grid-template-rows: masonry;
+	width: 100%;
+  padding: 0 2rem 0 0;
 }
 
 .div1,
@@ -22,7 +24,6 @@
 	grid-row-start: 2;
 	grid-row-end: 4;
 	height: 300px;
-	width: 100%;
 }
 
 .div5 {
@@ -31,7 +32,6 @@
 	grid-row-start: 3;
 	grid-row-end: 3;
 	height: 220px;
-	width: 100%;
 }
 
 .div6 {
@@ -56,11 +56,9 @@
 
 @media screen and (min-width: 2560px) {
 	.container {
-		display: grid;
-		gap: 20px;
-		grid-template-rows: masonry;
-    justify-self: center;
-	}
-
-  
+    max-width: 1200px; /* Adjust as needed */
+    margin: 0 auto; /* Centers the container */
+    padding: 0; /* Remove extra right padding */
+  }
 }
+
