--- a/src/components/cards/total_customers_kpi/total_customers.module.css
+++ b/src/components/cards/total_customers_kpi/total_customers.module.css
@@ -1,4 +1,21 @@
 .container {
 	width: 100%;
   height: 100%;
+  display: flex;
+  flex-direction: row;
+}
+
+.title {
+  width: 43%;
+}
+
+.total_customers_container {
+  display: flex;
+  justify-content: center;
+}
+
+.total_customers_num {
+  font-size: 3rem;
+  font-weight: bold;
+  margin: auto;
 }
