--- a/src/components/cards/total_customers_kpi/total_customers.module.css
+++ b/src/components/cards/total_customers_kpi/total_customers.module.css
@@ -6,7 +6,7 @@
 }
 
 .title {
-  width: 43%;
+  width: 40%;
 }
 
 .total_customers_container {
@@ -18,4 +18,18 @@
   font-size: 3rem;
   font-weight: bold;
   margin: auto;
+}
+
+.total_customers_container span {
+  display: flex;
+  align-items: end;
+  margin: 0 0 .5rem .5rem;
+}
+
+.green {
+  color: #21c421;
+}
+
+.red {
+  color: red;
 }
