--- a/src/components/cards/total_leads_kpi/total_leads.module.css
+++ b/src/components/cards/total_leads_kpi/total_leads.module.css
@@ -6,7 +6,7 @@
 }
 
 .title {
-  width: 33%;
+  width: 31%;
 }
 
 .total_leads_container {
@@ -18,4 +18,18 @@
   font-size: 3rem;
   font-weight: bold;
   margin: auto;
+}
+
+.total_leads_container span {
+  display: flex;
+  align-items: end;
+  margin: 0 0 .5rem .5rem;
+}
+
+.green {
+  color: #21c421;
+}
+
+.red {
+  color: red;
 }
