--- a/src/components/dashboard/dashboard.module.css
+++ b/src/components/dashboard/dashboard.module.css
@@ -54,6 +54,13 @@
 	height: 300px;
 }
 
+@media screen and (min-width: 1024px) and (max-width: 1439px) {
+  .container {
+    grid-template-columns: 400px 400px auto;
+    max-width: 500px;
+  }
+}
+
 @media screen and (min-width: 2560px) {
 	.container {
     max-width: 1200px; /* Adjust as needed */
