--- a/src/components/cards/abandoned_form/abandoned_form.module.css
+++ b/src/components/cards/abandoned_form/abandoned_form.module.css
@@ -2,3 +2,16 @@
 	width: 100%;
   height: 100%;
 }
+
+.title {
+  width: 47%;
+}
+
+.chart_container {
+	/* justify-content: space-between; Ensure even spacing */
+	/* align-items: center; */
+	width: 100%;
+	height: 250px; 
+  /* Make sure it takes full height */
+	padding:  0.1rem 1rem; /*Adjust padding */
+}
