--- a/src/components/cards/total_customers_kpi/total_customers.module.css
+++ b/src/components/cards/total_customers_kpi/total_customers.module.css
@@ -1,36 +1,77 @@
 .container {
 	width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: row;
+	height: 100%;
+	display: flex;
+	flex-direction: row;
 }
 
 .title {
-  width: 40%;
+	width: 40%;
 }
 
 .total_customers_container {
-  display: flex;
-  justify-content: center;
+	display: flex;
+	justify-content: center;
 }
 
 .total_customers_num {
-  font-size: 3rem;
-  font-weight: bold;
-  margin: auto;
+	font-size: 3rem;
+	font-weight: bold;
+	margin: auto;
 }
 
 .total_customers_container span {
-  display: flex;
-  align-items: end;
-  margin: 0 0 .5rem .5rem;
-  font-size: .85rem;
+	display: flex;
+	align-items: end;
+	margin: 0 0 0.5rem 0.5rem;
+	font-size: 0.85rem;
 }
 
 .green {
-  color: #21c421;
+	color: #21c421;
+	font-size: 30px;
 }
 
 .red {
-  color: red;
+	color: red;
+	font-size: 30px;
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1439px) {
+	.container {
+		display: block;
+	}
+
+	.title {
+		font-size: 0.8rem;
+		width: 100%;
+		height: 30px;
+	}
+
+	.total_customers_container {
+		display: block;
+		width: 200px;
+	}
+
+	.total_customers_num {
+		font-size: 2rem;
+		text-align: center;
+	}
+
+	.green {
+		font-size: 1rem;
+		text-align: end;
+    margin-bottom: .2rem;
+	}
+
+	.red {
+		font-size: 1rem;
+		text-align: end;
+    margin-bottom: .2rem;
+	}
+
+	.total_customers_container span {
+		padding-right: 1rem;
+		justify-content: end;
+	}
 }
