--- a/src/components/dashboard/dashboard.module.css
+++ b/src/components/dashboard/dashboard.module.css
@@ -4,7 +4,7 @@
 	gap: 15px;
 	grid-template-rows: masonry;
 	width: 100%;
-  padding: 0 2rem 0 0;
+	padding: 0 2rem 0 0;
 }
 
 .div1,
@@ -55,17 +55,23 @@
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1439px) {
-  .container {
-    grid-template-columns: 400px 400px auto;
-    max-width: 500px;
-  }
+	.container {
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+		max-width: 500px;
+	}
+
+	.div4 {
+		width: 600px;
+    grid-column-start: 1;
+    grid-column-end: 3;
+	}
+
 }
 
 @media screen and (min-width: 2560px) {
 	.container {
-    max-width: 1200px; /* Adjust as needed */
-    margin: 0 auto; /* Centers the container */
-    padding: 0; /* Remove extra right padding */
-  }
+		max-width: 1200px; /* Adjust as needed */
+		margin: 0 auto; /* Centers the container */
+		padding: 0; /* Remove extra right padding */
+	}
 }
-
