--- a/src/components/cards/leads_chart/leads_chart.module.css
+++ b/src/components/cards/leads_chart/leads_chart.module.css
@@ -1,61 +1,80 @@
 .container {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  height: 100%;
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+	height: 100%;
 }
 
 .content_container {
-  display: flex;
-  align-items: center;
-  margin-right: 2rem;
+	display: flex;
+	align-items: center;
+	margin-right: 2rem;
 }
 
 .total_count {
-  text-align: center;
-  width: 50%;
-  font-size: 3rem;
-  font-weight: bold;
-  padding: 0;
-  margin: 0;
-  line-height: 2.2rem;
+	text-align: center;
+	width: 50%;
+	font-size: 3rem;
+	font-weight: bold;
+	padding: 0;
+	margin: 0;
+	line-height: 2.2rem;
 }
 
 .total {
-  font-size: 1rem;
-  font-weight: lighter;
-  margin-right: 4rem;
-  display: block;
+	font-size: 1rem;
+	font-weight: lighter;
+	margin-right: 4rem;
+	display: block;
 }
 
 .chart_container {
-  width: 100%;
-  display: flex;
-  justify-content: end;
+	width: 100%;
+	display: flex;
+	justify-content: end;
 }
 
 .chart {
-  height: 200px;
-  display: flex;
-  justify-content: end;
-  width: 100%;
-}
-
-.barChart {
-
+	height: 200px;
+	display: flex;
+	justify-content: end;
+	width: 100%;
 }
 
 .tooltip {
-  background-color: white; /* Default Light Mode */
-  color: black;
-  border: 1px solid #ddd;
-  padding: 8px;
-  border-radius: 6px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+	background-color: white; /* Default Light Mode */
+	color: black;
+	border: 1px solid #ddd;
+	padding: 8px;
+	border-radius: 6px;
+	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .dark {
-  background-color: rgb(24, 23, 23);
-  color: white;
-  border: 1px solid #444;
+	background-color: rgb(24, 23, 23);
+	color: white;
+	border: 1px solid #444;
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1439px) {
+	.total_count {
+		font-size: 2rem;
+    width: 100%;
+	}
+
+  .total_count span {
+    font-size: 1rem;
+    text-align: center;
+    margin: 0 auto;  
+  }
+
+  .chart_container {
+    display: flex;
+    justify-content: flex-start;
+  }
+
+	.chart {
+		width: 85%;
+		justify-content: flex-start;
+	}
 }
