--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,13 @@
 @import 'tailwindcss';
+@import 'tailwindcss/preflight';
+@import 'tailwindcss/utilities';
+@config "../../tailwind.config.js";
 
+@custom-variant dark (&:is(.dark *));
+
+root {
+  --background: white;
+}
 html,
 body {
 	max-width: 100vw;
@@ -23,11 +31,11 @@ a {
 	text-decoration: none;
 }
 
-/* @media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: dark) {
 	html {
 		color-scheme: dark;
 	}
-} */
+}
 
 .layout {
 	display: flex;
@@ -64,17 +72,15 @@ main {
 	box-shadow: 0 10px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 12px 0 rgba(0, 0, 0, 0.19) !important;
 }
 
-[data-theme="dark"] {
+[data-theme='dark'] {
+	--border-color: #fff;
 
-  --border-color: red;
-
-  --border-opacity: 0.2;
-
+	--border-opacity: 0.2;
 }
 
 @layer base {
-	:root {
-		--background: 240 10% 100%;
+  :root {
+		--background: 0 0% 100%;
 		--foreground: 240 10% 3.9%;
 		--card: 0 0% 100%;
 		--card-foreground: 240 10% 3.9%;
@@ -126,4 +132,26 @@ main {
 		--chart-4: 280 65% 60%;
 		--chart-5: 340 75% 55%;
 	}
+}
+
+@layer base {
+	* {
+		@apply border outline-ring/50;
+	}
+	body {
+		@apply bg-background text-foreground;
+	}
+}
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+	}
+  body {
+    @apply bg-background text-foreground;
+	}
+}
+
+@theme {
+  --color-background: hsl(var(--background));
+  --color-foreground: hsl(var(--foreground));
 }
