--- a/src/components/navs/navigation/navigation.module.css
+++ b/src/components/navs/navigation/navigation.module.css
@@ -31,7 +31,7 @@
 	display: flex;
 	width: 80px;
 	height: 30px;
-	background: #4e9caf;
+	/* background: #4e9caf; */
 	padding: 10px;
 	text-align: center;
 	border-radius: 5px;
