--- a/src/components/post/post.module.css
+++ b/src/components/post/post.module.css
@@ -1,42 +1,33 @@
-.card {
-	padding: 1rem 0;
+.posts_container {
+  padding: 0 1.5rem 0 0;
 }
 
-.tableheader_container {
-	display: flex;
-	justify-content: space-around;
-	position: sticky;
-  top: 0;
-  background-color: #fff;
+.tabs_list_container {
+  display: inline-flex;
+  justify-content: space-between;
+  padding: 0 1.5rem 0 0;
+
 }
 
-.tableheader {
-  width: 80px;
-  position: sticky;
-  top: 0;
+.tabs_trigger {
+	width: 80px;
+  padding: 1rem;
+  font-size: .9rem;
 }
 
-.tableheader:nth-child(1) {
-  margin-left: 7rem;
+.tabs_trigger[data-state='active'] {
+	background: #fff;
+	height: 32px;
+	border-radius: 4px;
+	border: 0.01rem solid rgba(0, 0, 0, 0.5);
+  color: #000;
 }
 
-.post_information_container {
-	display: flex;
-	justify-content: space-around;
-	box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.1);
-	margin: 1rem 0;
-	border: 1px solid rgba(0, 0, 0, 0.2);
-}
-
-.post_information {
-	width: 220px;
-	height: 150px;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-}
-
-.checkbox_container {
-  display: flex;
-  align-items: center;
+.tabs_trigger_dark[data-state='active'] {
+  background: #000;
+	height: 32px;
+  width: 70px;
+	border-radius: 4px;
+  border: .01rem solid rgba(250, 250, 250, .5);
+  color: #fff;
 }
